--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,20 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'reset';
+@import 'components/header';
+@import 'components/speaker';
+@import 'components/site-navigation';
+@import 'components/features';
+@import 'components/meet-luna';
+@import 'components/articles';
+@import 'components/director';
+@import 'components/additional-features';
+@import 'components/questions';
+@import 'components/footer';
 
-body {
-  background: $c-gray;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .main {
+    overflow: hidden;
+  }
 }
